// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// this defines the state model for the Product Popularity Value Entity

syntax = "proto3";

package shopping.product.domain;

option java_outer_classname = "ProductPopularityDomain";

import "akkaserverless/annotations.proto";

option (akkaserverless.file).value_entity = {
  name: "ProductPopularityValueEntity"
  entity_type: "product-popularity"
  state: "Popularity"
};

message Popularity {
  string productId = 1;
  int32 score = 2;
}
